Add wheel requirement

--- a/framework/requirements.txt
+++ b/framework/requirements.txt
@@ -84,6 +84,7 @@ urllib3==1.26.5
 uvloop==0.17.0
 websocket-client==0.57.0
 Werkzeug==2.2.3
+wheel=0.38.4
 xmltodict==0.12.0
 yarl==1.7.0
 zipp==3.3.2
