--- a/ruleset/sca/sles/15/cis_sles15_linux.yml
+++ b/ruleset/sca/sles/15/cis_sles15_linux.yml
@@ -703,27 +703,7 @@ checks:
       - "f:/usr/lib/systemd/system/rescue.service -> r: systemd-sulogin-shell"
       - "f:/usr/lib/systemd/system/emergency.service -> r: systemd-sulogin-shell"
 
-  # 1.6.1 Ensure core dumps are restricted. (Automated)
-  - id: 21036
-    title: "Ensure core dumps are restricted."
-    description: "A core dump is the memory of an executable program. It is generally used to determine why a program aborted. It can also be used to glean confidential information from a core file. The system provides the ability to set a soft limit for core dumps, but this can be overridden by the user."
-    rationale: "Setting a hard limit on core dumps prevents users from overriding the soft variable. If core dumps are required, consider setting limits for user groups (see limits.conf(5)). In addition, setting the fs.suid_dumpable variable to 0 will prevent setuid programs from dumping core."
-    remediation: "Add the following line to /etc/security/limits.conf or a /etc/security/limits.d/* file: * hard core 0 Set the following parameter in /etc/sysctl.conf or a /etc/sysctl.d/* file: fs.suid_dumpable = 0 Run the following command to set the active kernel parameter: # sysctl -w fs.suid_dumpable=0 If systemd-coredump is installed: edit /etc/systemd/coredump.conf and add/modify the following lines: Storage=none ProcessSizeMax=0 Run the command: systemctl daemon-reload."
-    compliance:
-      - cis: ["1.6.1"]
-      - cis_csc_v8: ["4.1"]
-      - cis_csc_v7: ["5.1"]
-      - cmmc_v2.0: ["AC.L1-3.1.1", "AC.L1-3.1.2", "CM.L2-3.4.1", "CM.L2-3.4.2", "CM.L2-3.4.6", "CM.L2-3.4.7"]
-      - iso_27001-2013: ["A.14.2.5", "A.8.1.3"]
-      - nist_sp_800-53: ["CM-7(1)", "CM-9", "SA-10"]
-      - pci_dss_v3.2.1: ["11.5", "2.2"]
-      - pci_dss_v4.0: ["1.1.1", "1.2.1", "1.2.6", "1.2.7", "1.5.1", "2.1.1", "2.2.1"]
-      - soc_2: ["CC7.1", "CC8.1"]
-    condition: all
-    rules:
-      - 'f:/etc/security/limits.conf -> !r:^# && r:*\s*\t*hard\s*\t*core\s*\t*0'
-      - "c:sysctl fs.suid_dumpable -> r:fs.suid_dumpable = 0"
-      - "c:systemctl is-enabled coredump.service -> r:^enabled"
+  # 1.6.1 Ensure core dumps are restricted. (Automated) - Not Implmented
 
   # 1.6.2 Ensure XD/NX support is enabled. (Automated)
   - id: 21037
@@ -805,6 +785,7 @@ checks:
       - "c:rpm -q apparmor-parser -> r:apparmor-parser-"
       - "c:rpm -q apparmor-profiles -> r:apparmor-profiles-"
       - "c:rpm -q apparmor-utils -> r:apparmor-utils-"
+      - "c:rpm -q libapparmor1 -> r:libapparmor1-"
 
   # 1.7.1.2 Ensure AppArmor is enabled in the bootloader configuration. (Automated)
   - id: 21041
@@ -933,7 +914,7 @@ checks:
       - soc_2: ["CC7.1", "CC8.1"]
     condition: all
     rules:
-      - 'f:/etc/issue.net -> r:\\v|\\r|\\m|\\s'
+      - 'not f:/etc/issue.net -> r:\\v|\\r|\\m|\\s'
 
   # 1.8.1.4 Ensure permissions on /etc/motd are configured. (Automated)
   - id: 21047
@@ -998,7 +979,24 @@ checks:
     rules:
       - 'c:stat /etc/issue.net -> r:Access:\s*\(0644/-rw-r--r--\)\s*Uid:\s*\(\s*\t*0/\s*\t*root\)\s*\t*Gid:\s*\(\s*\t*0/\s*\t*root\)'
 
-  # 1.9 Ensure updates, patches, and additional security software are installed. (Manual) - Not Implemented
+  # 1.9 Ensure updates, patches, and additional security software are installed. (Manual)
+  - id: 18700
+    title: "Ensure updates, patches, and additional security software are installed."
+    description: "Periodically patches are released for included software either due to security flaws or to include additional functionality. Note: Site policy may mandate a testing period before install onto production systems for available updates."
+    rationale: "Newer patches may contain security enhancements that would not be available through the latest full update. As a result, it is recommended that the latest software patches be used to take advantage of the latest functionality. As with any software installation, organizations need to determine if a given update meets their requirements and verify the compatibility and supportability of any additional software against the update revision that is selected."
+    remediation: "Use your package manager to update all packages on the system according to site policy. The following command will install all available updates: # zypper update."
+    compliance:
+      - cis: ["1.9"]
+      - cis_csc_v8: ["7.3", "7.4"]
+      - cis_csc_v7: ["3.4", "3.5"]
+      - cmmc_v2.0: ["SI.L1-3.14.1"]
+      - nist_sp_800-53: ["SI-2(2)"]
+      - pci_dss_v3.2.1: ["6.2"]
+      - soc_2: ["CC7.1"]
+    condition: all
+    rules:
+      - "c:zypper list-updates -> r:No updates found"
+
   # 1.10 Ensure GDM is removed or login is configured. (Automated)
   - id: 21051
     title: "Ensure GDM is removed or login is configured."
@@ -1021,6 +1019,7 @@ checks:
       - "f:/etc/dconf/profile/gdm -> r:file-db:/usr/share/gdm/greeter-dconf-defaults"
       - 'd:/etc/dconf/db/gdm.d -> r:\.+ -> r:banner-message-enable=true'
       - 'd:/etc/dconf/db/gdm.d -> r:\.+ -> r:banner-message-text='
+      - 'd:/etc/dconf/db/gdm.d -> r:\.+ -> r:disable-user-list=true'
 
   # 2.1.1 Ensure xinetd is not installed. (Automated)
   - id: 21052
