--- a/.github/workflows/wodles-unit-tests.yml
+++ b/.github/workflows/wodles-unit-tests.yml
@@ -37,5 +37,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r framework/requirements-dev.txt
 
-      - name: Run WODLES tests
+      - name: Run Wodles tests
         run: python -m pytest wodles
