--- a/src/engine/source/queue/CMakeLists.txt
+++ b/src/engine/source/queue/CMakeLists.txt
@@ -7,13 +7,26 @@ CPMAddPackage(
   EXCLUDE_FROM_ALL YES
 )
 
+# Defs
+set(SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
+set(INC_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
+set(IFACE_DIR ${CMAKE_CURRENT_LIST_DIR}/interface)
+set(TEST_DIR ${CMAKE_CURRENT_LIST_DIR}/test)
+
+## Interface
+add_library(queue_iqueue INTERFACE)
+target_include_directories(queue_iqueue INTERFACE ${IFACE_DIR})
+target_link_libraries(queue_iqueue INTERFACE fmt base)
+add_library(queue::iqueue ALIAS queue_iqueue)
+
+## Queue
 add_library(queue STATIC
-  src/concurrentQueue.cpp)
+  ${SRC_DIR}/concurrentQueue.cpp)
 
 # target_link_libraries(queue
 target_include_directories(queue
   PUBLIC
-  ${CMAKE_CURRENT_SOURCE_DIR}/include
+  ${INC_DIR}
   ${CameronQueue_SOURCE_DIR}
 )
 
@@ -21,4 +34,27 @@ target_link_libraries(queue
   PUBLIC
   base # Only for the loggin
   metrics
+  queue::iqueue
 )
+
+# Tests
+if(ENGINE_BUILD_TEST)
+
+set(TEST_SRC_DIR ${TEST_DIR}/src)
+set(TEST_SRC_COMPONENT_DIR ${TEST_SRC_DIR}/component)
+set(TEST_SRC_UNIT_DIR ${TEST_SRC_DIR}/unit)
+set(TEST_MOCK_DIR ${TEST_DIR}/mocks)
+
+# Mocks
+add_library(queue_mocks INTERFACE)
+target_include_directories(queue_mocks INTERFACE ${TEST_MOCK_DIR})
+target_link_libraries(queue_mocks INTERFACE gmock queue)
+add_library(queue::mocks ALIAS queue_mocks)
+
+add_executable(queue_utest
+  ${TEST_SRC_UNIT_DIR}/priority_queue.cpp
+)
+
+target_link_libraries(queue_utest gtest_main base queue queue::mocks)
+gtest_discover_tests(queue_utest)
+endif(ENGINE_BUILD_TEST)
