--- a/src/shared_modules/router/tests/unit/CMakeLists.txt
+++ b/src/shared_modules/router/tests/unit/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(${PROJECT_NAME}
         gtest
         gtest_main
         router
+        pthread
         )
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
