--- a/src/shared_modules/indexer_connector/tests/unit/CMakeLists.txt
+++ b/src/shared_modules/indexer_connector/tests/unit/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries(${PROJECT_NAME}
         gtest
         gtest_main
         indexer_connector
+        pthread
 )
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
