--- a/src/shared_modules/content_manager/tests/unit/CMakeLists.txt
+++ b/src/shared_modules/content_manager/tests/unit/CMakeLists.txt
@@ -21,6 +21,7 @@ target_link_libraries(${PROJECT_NAME}
     wazuhext
     lzma
     rocksdb
+    pthread
 )
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
