Add pthread to content_manager_component_tests

--- a/src/shared_modules/content_manager/tests/component/CMakeLists.txt
+++ b/src/shared_modules/content_manager/tests/component/CMakeLists.txt
@@ -19,6 +19,7 @@ target_link_libraries(${PROJECT_NAME}
     urlrequest
     router
     rocksdb
+    pthread
 )
 
 target_link_libraries(${PROJECT_NAME} content_manager)
