Add missing package to spec.yaml
snap

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -4818,6 +4818,7 @@ components:
             - win
             - pkg
             - apk
+            - snap
             - macports
             - pypi
             - npm
