Windows 11 Enterprise SCA review corrections

--- a/ruleset/sca/windows/cis_win11_enterprise.yml
+++ b/ruleset/sca/windows/cis_win11_enterprise.yml
@@ -544,8 +544,8 @@ checks:
       - soc_2: ["CC6.1"]
     condition: all
     rules:
-      - 'c:net.exe accounts -> n:Maximum password age (days):\s+(\d+) compare <= 30'
-      - 'c:net.exe accounts -> n:Maximum password age (days):\s+(\d+) compare > 0'
+      - 'c:net.exe accounts -> n:Maximum password age \(days\):\s+(\d+) compare <= 30'
+      - 'c:net.exe accounts -> n:Maximum password age \(days\):\s+(\d+) compare > 0'
 
   # 2.3.6.6 (L1) Ensure 'Domain member: Require strong (Windows 2000 or later) session key' is set to 'Enabled'. (Automated)
   - id: 26024
