--- a/.github/workflows/framework-unit-tests.yml
+++ b/.github/workflows/framework-unit-tests.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r framework/requirements-dev.txt
+          python -m pip install --upgrade pip wheel
+          pip install -r framework/requirements-dev.txt --no-build-isolation
 
       - name: Run Framework tests
         run: python -m pytest framework
