Improved api-communication python lib and updated integation tests

--- a/src/engine/tools/api-communication/setup.cfg
+++ b/src/engine/tools/api-communication/setup.cfg
@@ -2,7 +2,7 @@
 name = api-communication
 version = 1.0.0.dev0
 author = "Wazuh Inc."
-description = "A tool that allows to establish a communication with the Engine"
+description = "A library to communicate with the Wazuh Engine API."
 license = BSD-3-Clause
 
 [options]
@@ -10,6 +10,7 @@ packages = find:
 package_dir =
     = src
 include_package_data = True
+
 python_requires = >=3.8
 
 install_requires =
@@ -19,9 +20,4 @@ install_requires =
 where = src
 
 [options.package_data]
-engine_schema =
-    *.json
-
-[options.extras_require]
-dev =
-    autopep8
+* = *.pyi
