Base router table

--- a/src/engine/source/router2/CMakeLists.txt
+++ b/src/engine/source/router2/CMakeLists.txt
@@ -12,7 +12,7 @@ add_library(router2::irouter ALIAS router2_irouter)
 # Implementation
 add_library(router2_router STATIC
    ${SRC_DIR}/environment.cpp
-   ${SRC_DIR}/worker.cpp
+   ${SRC_DIR}/table.cpp
 )
 
 target_include_directories(router2_router
