Add changes to be builder pattern compliance.

--- a/src/shared_modules/indexer_connector/testtool/CMakeLists.txt
+++ b/src/shared_modules/indexer_connector/testtool/CMakeLists.txt
@@ -4,6 +4,9 @@ file(GLOB INDEXER_CONNECTOR_TOOL_SRC
     "*.cpp"
     )
 
+# Add address sanitizer
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
+
 add_executable(indexer_connector_tool
     ${INDEXER_CONNECTOR_TOOL_SRC}
     )
